hphp/test/quick/static_fatal.php.expectf
two

Fatal error: Call to undefined method two::heh() in %stest/quick/static_fatal.php on line 6
